--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,6 +15,12 @@
     <param-value>classpath:log4j.properties</param-value>
   </context-param>
 
+  <!--为上下文设置默认的profile-->
+  <context-param>
+    <param-name>spring.profiles.default</param-name>
+    <param-value>dev</param-value>
+  </context-param>
+
   <!--Log4j的监听器要放在spring监听器的前面-->
   <listener>
     <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
@@ -25,4 +31,21 @@
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
   <display-name>Archetype Created Web Application</display-name>
+
+  <servlet>
+    <servlet-name>appServlet</servlet-name>
+    <servlet-class>
+      org.springframework.web.servlet.DispatcherServlet
+    </servlet-class>
+    <init-param>
+      <param-name>spring.profiles.default</param-name>
+      <param-value>dev</param-value>
+    </init-param>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+  
+  <servlet-mapping>
+    <servlet-name>appServlet</servlet-name>
+    <url-pattern>/</url-pattern>
+  </servlet-mapping>
 </web-app>
